@@ -1,5 +1,7 @@
 udev 138
 ========
+Device nodes can be watched for changes with inotify with OPTIONS="watch".  If
+closed after being opened for writing, a "change" uevent will occur.
 
 udev 137
 ========
